--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.12"
 dependencies = [
     "click>=8.1.8",
     "colorama>=0.4.6",
+    "pynput>=1.8.1",
     "pyzstd>=0.16.2",
     "rich>=13.9.4",
 ]
