--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,16 +1,10 @@
 [project]
 name = "zhif"
-version = "0.1.1"
-description = "Add your description here"
+version = "1.0.0"
+description = "ZHIF 是一个中文互动小说解释器，基于 Python3 实现。"
 readme = "README.md"
 requires-python = ">=3.12"
-dependencies = [
-    "click>=8.1.8",
-    "colorama>=0.4.6",
-    "pynput>=1.8.1",
-    "pyzstd>=0.16.2",
-    "rich>=13.9.4",
-]
+dependencies = []
 
 [[tool.uv.index]]
 url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
