--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,8 +4,6 @@ version = "1.0.0"
 description = "ZHIF 是一个中文互动小说解释器，基于 Python3 实现。"
 readme = "README.md"
 requires-python = ">=3.12"
-dependencies = []
-
-[[tool.uv.index]]
-url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
-default = true
+dependencies = [
+    "orjson>=3.10.18",
+]
