--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
-name = "zhif"
+name = "QriaDrama"
 version = "1.0.0"
-description = "ZHIF 是一个中文互动小说解释器，基于 Python3 实现。"
+description = ""
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
