--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,5 +5,11 @@ description = ""
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "colorlog>=6.9.0",
     "orjson>=3.10.18",
+    "pygame>=2.6.1",
 ]
+
+[[tool.uv.index]]
+url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
+default = true
