--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,10 +5,8 @@ description = ""
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
-    "colorlog>=6.9.0",
-    "orjson>=3.10.18",
-    "pygame>=2.6.1",
-    "pyglet>=2.1.6",
+    "cryptography>=45.0.6",
+    "pywebview>=6.0",
 ]
 
 [[tool.uv.index]]
