--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = ""
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "colorlog>=6.9.0",
     "cryptography>=45.0.6",
     "pywebview>=6.0",
 ]
